updated each organization services with the mapping methods