@@ -4,6 +4,7 @@ import com.company.hrm.organization.entity.Branch;
 import com.company.hrm.organization.entity.Organization;
 import com.company.hrm.organization.dto.BranchRequest;
 import com.company.hrm.organization.dto.BranchResponse;
+import com.company.hrm.organization.mapper.OrganizationMapper;
 import com.company.hrm.organization.repository.BranchRepository;
 import com.company.hrm.organization.repository.OrganizationRepository;
 import jakarta.persistence.EntityNotFoundException;
@@ -12,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,37 +21,39 @@ public class BranchService {
 
     private final BranchRepository branchRepository;
     private final OrganizationRepository organizationRepository;
+    private final OrganizationMapper organizationMapper;
 
     public BranchResponse createBranch(BranchRequest requestDto) {
         Organization organization = organizationRepository.findById(requestDto.getOrganizationId())
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Organization not found with ID: " + requestDto.getOrganizationId()));
 
-        Branch branch = requestDto.toEntity(organization);
+        Branch branch = organizationMapper.toEntity(requestDto);
+        branch.setOrganization(organization);
         Branch savedBranch = branchRepository.save(branch);
 
-        return BranchResponse.fromEntity(savedBranch);
+        return organizationMapper.toResponse(savedBranch);
     }
 
     @Transactional(readOnly = true)
     public BranchResponse getBranchById(Long id) {
         Branch branch = branchRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Branch not found with ID: " + id));
-        return BranchResponse.fromEntity(branch);
+        return organizationMapper.toResponse(branch);
     }
 
     @Transactional(readOnly = true)
     public List<BranchResponse> getAllBranches() {
         return branchRepository.findAll().stream()
-                .map(BranchResponse::fromEntity)
-                .collect(Collectors.toList());
+                .map(organizationMapper::toResponse)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<BranchResponse> getBranchesByOrganization(Long organizationId) {
         return branchRepository.findByOrganizationId(organizationId).stream()
-                .map(BranchResponse::fromEntity)
-                .collect(Collectors.toList());
+                .map(organizationMapper::toResponse)
+                .toList();
     }
 
     public BranchResponse updateBranch(Long id, BranchRequest requestDto) {
@@ -62,25 +64,11 @@ public class BranchService {
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Organization not found with ID: " + requestDto.getOrganizationId()));
 
+        organizationMapper.updateBranch(requestDto, existingBranch);
         existingBranch.setOrganization(organization);
-        existingBranch.setName(requestDto.getName());
-        existingBranch.setCode(requestDto.getCode());
-        existingBranch.setAddress(requestDto.getAddress());
-        existingBranch.setCity(requestDto.getCity());
-        existingBranch.setRegion(requestDto.getRegion());
-        existingBranch.setCountry(requestDto.getCountry());
-        existingBranch.setPhone(requestDto.getPhone());
-        existingBranch.setEmail(requestDto.getEmail());
-        // FIX 1: Set headquarters using getter from DTO
-        existingBranch.setHeadquarters(Boolean.TRUE.equals(requestDto.getHeadquarters()));
-
-        // FIX 2: Convert String status to Branch.Status Enum
-        if (requestDto.getStatus() != null) {
-            existingBranch.setStatus(Branch.Status.valueOf(requestDto.getStatus().toUpperCase()));
-        }
 
         Branch updatedBranch = branchRepository.save(existingBranch);
-        return BranchResponse.fromEntity(updatedBranch);
+        return organizationMapper.toResponse(updatedBranch);
     }
 
     public void deleteBranch(Long id) {
