@@ -3,6 +3,7 @@ package com.company.hrm.organization.service;
 import com.company.hrm.organization.entity.JobGrade;
 import com.company.hrm.organization.dto.JobGradeRequest;
 import com.company.hrm.organization.dto.JobGradeResponse;
+import com.company.hrm.organization.mapper.OrganizationMapper;
 import com.company.hrm.organization.repository.JobGradeRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,39 +18,36 @@ import java.util.stream.Collectors;
 public class JobGradeService {
 
     private final JobGradeRepository jobGradeRepository;
+    private final OrganizationMapper organizationMapper;
 
     public JobGradeResponse createJobGrade(JobGradeRequest requestDto) {
-        JobGrade jobGrade = requestDto.toEntity();
+        JobGrade jobGrade = organizationMapper.toEntity(requestDto);
         JobGrade savedJobGrade = jobGradeRepository.save(jobGrade);
-        return JobGradeResponse.fromEntity(savedJobGrade);
+        return organizationMapper.toResponse(savedJobGrade);
     }
 
     @Transactional(readOnly = true)
     public JobGradeResponse getJobGradeById(Long id) {
         JobGrade jobGrade = jobGradeRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("JobGrade not found with ID: " + id));
-        return JobGradeResponse.fromEntity(jobGrade);
+        return organizationMapper.toResponse(jobGrade);
     }
 
     @Transactional(readOnly = true)
     public List<JobGradeResponse> getAllJobGrades() {
         return jobGradeRepository.findAll().stream()
-                .map(JobGradeResponse::fromEntity)
-                .collect(Collectors.toList());
+                .map(organizationMapper::toResponse)
+                .toList();
     }
 
     public JobGradeResponse updateJobGrade(Long id, JobGradeRequest requestDto) {
         JobGrade existingJobGrade = jobGradeRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("JobGrade not found with ID: " + id));
 
-        existingJobGrade.setName(requestDto.getName());
-        existingJobGrade.setLevel(requestDto.getLevel());
-        existingJobGrade.setDescription(requestDto.getDescription());
-        existingJobGrade.setMinSalary(requestDto.getMinSalary());
-        existingJobGrade.setMaxSalary(requestDto.getMaxSalary());
+        organizationMapper.updateJobGrade(requestDto, existingJobGrade);
 
         JobGrade updatedJobGrade = jobGradeRepository.save(existingJobGrade);
-        return JobGradeResponse.fromEntity(updatedJobGrade);
+        return organizationMapper.toResponse(updatedJobGrade);
     }
 
     public void deleteJobGrade(Long id) {
