@@ -3,6 +3,7 @@ package com.company.hrm.organization.service;
 import com.company.hrm.organization.entity.Organization;
 import com.company.hrm.organization.dto.OrganizationRequest;
 import com.company.hrm.organization.dto.OrganizationResponse;
+import com.company.hrm.organization.mapper.OrganizationMapper;
 import com.company.hrm.organization.repository.OrganizationRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,45 +18,36 @@ import java.util.stream.Collectors;
 public class OrganizationService {
 
     private final OrganizationRepository organizationRepository;
+    private final OrganizationMapper organizationMapper;
 
     public OrganizationResponse createOrganization(OrganizationRequest requestDto) {
-        Organization organization = requestDto.toEntity();
+        Organization organization = organizationMapper.toEntity(requestDto);
         Organization savedOrganization = organizationRepository.save(organization);
-        return OrganizationResponse.fromEntity(savedOrganization);
+        return organizationMapper.toResponse(savedOrganization);
     }
 
     @Transactional(readOnly = true)
     public OrganizationResponse getOrganizationById(Long id) {
         Organization organization = organizationRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Organization not found with ID: " + id));
-        return OrganizationResponse.fromEntity(organization);
+        return organizationMapper.toResponse(organization);
     }
 
     @Transactional(readOnly = true)
     public List<OrganizationResponse> getAllOrganizations() {
         return organizationRepository.findAll().stream()
-                .map(OrganizationResponse::fromEntity)
-                .collect(Collectors.toList());
+                .map(organizationMapper::toResponse)
+                .toList();
     }
 
     public OrganizationResponse updateOrganization(Long id, OrganizationRequest requestDto) {
         Organization existingOrganization = organizationRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Organization not found with ID: " + id));
 
-        existingOrganization.setName(requestDto.getName());
-        existingOrganization.setLegalName(requestDto.getLegalName());
-        existingOrganization.setRegistrationNumber(requestDto.getRegistrationNumber());
-        existingOrganization.setTaxId(requestDto.getTaxId());
-        existingOrganization.setIndustry(requestDto.getIndustry());
-        existingOrganization.setAddress(requestDto.getAddress());
-        existingOrganization.setPhone(requestDto.getPhone());
-        existingOrganization.setEmail(requestDto.getEmail());
-        existingOrganization.setWebsite(requestDto.getWebsite());
-        existingOrganization.setLogoUrl(requestDto.getLogoUrl());
-        existingOrganization.setFoundedDate(requestDto.getFoundedDate());
+        organizationMapper.updateOrganization(requestDto, existingOrganization);
 
         Organization updatedOrganization = organizationRepository.save(existingOrganization);
-        return OrganizationResponse.fromEntity(updatedOrganization);
+        return organizationMapper.toResponse(updatedOrganization);
     }
 
     public void deleteOrganization(Long id) {
